[FIX] Fixed h2 spacing

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ h1{
 
 h2{
     font-size: 40px;
-    padding: 20px 0;
+    padding: 20px 0 50px 0;
 }
 
 h3{
